removeLast check